Fixed header alignment

--- a/style.css
+++ b/style.css
@@ -4,18 +4,19 @@ body {
 }
 .header { 
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: #1F2937; 
     color: white;     
-    padding-right: 300px; 
-    padding-left: 190px;   
+    padding-right: 240px; 
+    padding-left: 190px;  
+    gap: 510px;  
 }
 
 .RS {
     display: flex; 
     justify-content: right; 
     align-items: center; 
-    gap: 20px;  
+    gap: 20px;      
 }
 
 li{
